--- a/app.html
+++ b/app.html
@@ -16,6 +16,11 @@
     <!-- Favicon-->
     <link rel="icon" type="image/png" href="./img/favicon-32x32.png">
 
+    <!-- Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Zen+Tokyo+Zoo&display=swap" rel="stylesheet">
+
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/5db21ba9c6.js" crossorigin="anonymous"></script>
 </head>
@@ -24,8 +29,8 @@
     <!-- Nav Section -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark shadow">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="./img/kg.webp" class="d-inline-block align-text-top" width="30"
-                    height="24"> APP NAME</a>
+            <a class="navbar-brand logoFont" href="#"><img src="./img/kg.webp" class="d-inline-block align-text-top" width="30"
+                    height="24"> FIZZ BUZZ</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
