--- a/app.html
+++ b/app.html
@@ -27,7 +27,7 @@
 
 <body class="d-flex flex-column h-100">
     <!-- Nav Section -->
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark shadow">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top shadow">
         <div class="container-fluid">
             <a class="navbar-brand logoFont" href="#"><img src="./img/kg.webp" class="d-inline-block align-text-top" width="30"
                     height="24"> FIZZ BUZZ</a>
