--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body class="d-flex flex-column h-100">
 <!-- Nav Section -->
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark shadow">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top shadow">
     <div class="container-fluid">
         <a class="navbar-brand logoFont" href="#"><img src="./img/kg.webp" class="d-inline-block align-text-top" width="30" height="24"> FIZZ BUZZ</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
@@ -62,8 +62,9 @@
            <div class="row g-5 py-5 row-cols-1 row-cols-lg-2">
                <div class="col order-last order-lg-first">
                     <h1 class="display-5 fw-bold lh-1 mb-3 logoFont">FIZZ BUZZ: A Coding Project</h1>
-                    <h4 class="lead">Live life one loop at a time. A JavaScript coding exercise using loops. Write a
-                        program that displays the numbers from 0 to 100. Display the even numbers in <strong>BOLD.</strong>
+                    <h4 class="lead">When it counts you Fizz Buzz. A JavaScript coding exercise using loops. Write a program that
+                        prints the numbers from 1 to 100 and for multiples of '3' display "Fizz" instead of the number and for multiples
+                        of '5' display "Buzz." If the number is a multiple of both display "FizzBuzz."
                     </h4>
                     <ul class="fa-ul pt-2 checklist">
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap Layout</li>
