--- a/app.html
+++ b/app.html
@@ -77,7 +77,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-lg-8 col">
+                <div class="col-lg-8 col border-start border-2">
                     <h5>Enter Values</h5>
                     <form class="row gy-2 gx-3">
                         <div class="col">
@@ -90,9 +90,17 @@
                             <button id="btnSubmit" type="button" class="btn btn-dark btn-large">FizzBuzz it</button>
                         </div>
                     </form>
-
-                    <div class="col-12">
-                        <h2>Results</h2>
+                    <div class="row">
+                        <div class="col-12">
+                            <h2 class="mt-2 border-bottom border-2">Results</h2>
+                            <div class="table-responsive">
+                                <table class="table table-striped table-sm">
+                                    <tbody id="results">
+                                        
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
