--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                     <h1 class="display-5 fw-bold lh-1 mb-3 logoFont">FIZZ BUZZ: A Coding Project</h1>
                     <h4 class="lead">When it counts you Fizz Buzz. A JavaScript coding exercise using loops. Write a program that
                         prints the numbers from 1 to 100 and for multiples of '3' display "Fizz" instead of the number and for multiples
-                        of '5' display "Buzz." If the number is a multiple of both display "FizzBuzz."
+                        of '5' display "Buzz." If the number is a multiple of both display "FizzBuzz." Interesting side now, this is actually
+                        My first time ever doing the FizzBuzz Challenge. Enjoy!
                     </h4>
                     <ul class="fa-ul pt-2 checklist">
                         <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS and Bootstrap Layout</li>
@@ -92,7 +93,7 @@
 
                <!-- Logo Section -->
                <div class="col d-flex align-content-center">
-                   <img src="./img/fizzbuzz.webp" class="img-fluid center-block d-block mx-auto" alt="App Logo" width="700" height="500">
+                   <img src="./img/fizzbuzz.webp" class="img-fluid center-block d-block mx-auto" style="max-height: 480px;" alt="App Logo" width="700" height="500">
                </div>
            </div>
        </div>
