--- a/app.html
+++ b/app.html
@@ -96,7 +96,7 @@
                             <div class="table-responsive">
                                 <table class="table table-striped table-sm">
                                     <tbody id="results">
-                                        
+                                        <!-- Results go Here -->
                                     </tbody>
                                 </table>
                             </div>
@@ -139,5 +139,8 @@
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
     </script>
     <script src="./js/site.js"></script>
+    <script>
+        document.getElementById("btnSubmit").addEventListener("click", getInput);
+    </script>
 </body>
 </html>
