--- a/app.html
+++ b/app.html
@@ -66,8 +66,8 @@
                         <h1 class="display-5 logoFont">FizzBuzz: A coding Project</h1>
                         <h4 class="lead">
                             When it counts you Fizz Buzz. A JavaScript coding exercise using loops. Write a program that
-                        prints the numbers from 1 to 100 and for multiples of '3' display "Fizz" instead of the number and for multiples
-                        of '5' display "Buzz." If the number is a multiple of both display "FizzBuzz."
+                            prints the numbers from 1 to 100 and for multiples of '3' display <span class="Fizz">"Fizz"</span> instead of the number and for multiples
+                            of '5' display <span class="Buzz">"Buzz."</span> If the number is a multiple of both display <span class="FizzBuzz">"FizzBuzz."</span>
                         </h4>
                     </div>
                     <div class="row">
